--- a/src/assets/styles/view/_home.scss
+++ b/src/assets/styles/view/_home.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 2rem 1rem 9rem 1rem;
+    padding: 9rem 1rem ;
     animation: fadeInUp 0.8s ease-out;
 
     h2 {
@@ -16,6 +16,10 @@
       text-align: center;
       margin-bottom: 2rem;
       animation: slideDown 0.6s ease-out;
+    }
+
+    p {
+      text-align: center;
     }
 
     table {
@@ -104,8 +108,6 @@
 
   @media (min-width: 768px) {
     #intro {
-      padding: 9rem 1rem;
-
       table {
         width: 80%;
         background: $color-bg-secondary;
