--- a/src/assets/styles/view/_about.scss
+++ b/src/assets/styles/view/_about.scss
@@ -4,33 +4,31 @@
 
 #about {
   main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 3rem 1rem;
-    max-width: 1200px;
+    @include column;
+    padding: $space-3xl $space-md;
+    max-width: $breakpoint-wide;
     margin: 0 auto;
 
     .intro {
       width: 100%;
       text-align: center;
       animation: fadeInUp 0.8s ease-out;
-      margin-bottom: 3rem;
+      margin-bottom: $space-3xl;
 
       h2 {
         @include section-heading;
-        margin-bottom: 2rem;
+        margin-bottom: $space-xl;
         animation: slideDown 0.6s ease-out;
       }
 
       p {
         @include section-paragraph;
         text-align: left;
-        margin-bottom: 1.5rem;
+        margin-bottom: $space-lg;
         font-size: 0.9rem;
 
         &:last-of-type {
-          margin-bottom: 2rem;
+          margin-bottom: $space-xl;
         }
       }
 
@@ -47,27 +45,13 @@
           );
           animation: fadeInUp 0.8s ease-out;
 
-          &:nth-child(1) {
-            animation-delay: 0.1s;
-          }
-          &:nth-child(2) {
-            animation-delay: 0.15s;
-          }
-          &:nth-child(3) {
-            animation-delay: 0.2s;
-          }
-          &:nth-child(4) {
-            animation-delay: 0.25s;
-          }
-          &:nth-child(5) {
-            animation-delay: 0.3s;
-          }
-          &:nth-child(6) {
-            animation-delay: 0.35s;
-          }
-          &:nth-child(7) {
-            animation-delay: 0.4s;
-          }
+          &:nth-child(1) { animation-delay: 0.1s; }
+          &:nth-child(2) { animation-delay: 0.15s; }
+          &:nth-child(3) { animation-delay: 0.2s; }
+          &:nth-child(4) { animation-delay: 0.25s; }
+          &:nth-child(5) { animation-delay: 0.3s; }
+          &:nth-child(6) { animation-delay: 0.35s; }
+          &:nth-child(7) { animation-delay: 0.4s; }
         }
       }
     }
@@ -75,21 +59,21 @@
     #mindset {
       width: 100%;
       text-align: center;
-      padding-top: 2rem;
-      padding-bottom: 9rem;
+      padding-top: $space-xl;
+      padding-bottom: $space-4xl;
       border-top: 1px solid $color-border-light;
       animation: fadeInUp 1s ease-out;
 
       h2 {
         @include section-heading;
-        margin-bottom: 2rem;
+        margin-bottom: $space-xl;
         animation: slideDown 0.7s ease-out;
       }
 
       p {
         @include section-paragraph;
         text-align: left;
-        margin-bottom: 2rem;
+        margin-bottom: $space-xl;
         font-size: 0.9rem;
       }
 
@@ -105,36 +89,23 @@
           );
           animation: fadeInUp 0.8s ease-out;
 
-          &:nth-child(1) {
-            animation-delay: 0.5s;
-          }
-          &:nth-child(2) {
-            animation-delay: 0.55s;
-          }
-          &:nth-child(3) {
-            animation-delay: 0.6s;
-          }
-          &:nth-child(4) {
-            animation-delay: 0.65s;
-          }
+          &:nth-child(1) { animation-delay: 0.5s; }
+          &:nth-child(2) { animation-delay: 0.55s; }
+          &:nth-child(3) { animation-delay: 0.6s; }
+          &:nth-child(4) { animation-delay: 0.65s; }
         }
       }
     }
-  }
-}
 
-// Tablet breakpoint (640px+)
-@media (min-width: 640px) {
-  #about {
-    main {
-      padding: 3rem 2rem;
+    @include tablet {
+      padding: $space-3xl $space-2xl;
 
       .intro {
-        margin-bottom: 4rem;
+        margin-bottom: $space-4xl;
 
         h2 {
           font-size: 2rem;
-          margin-bottom: 2.5rem;
+          margin-bottom: $space-2xl;
         }
 
         p {
@@ -146,16 +117,16 @@
 
         ul {
           grid-template-columns: 1fr 1fr;
-          gap: 1rem;
+          gap: $space-md;
         }
       }
 
       #mindset {
-        padding-top: 3rem;
+        padding-top: $space-3xl;
 
         h2 {
           font-size: 2rem;
-          margin-bottom: 2.5rem;
+          margin-bottom: $space-2xl;
         }
 
         p {
@@ -167,25 +138,20 @@
 
         ul {
           grid-template-columns: 1fr 1fr;
-          gap: 1rem;
+          gap: $space-md;
         }
       }
     }
-  }
-}
 
-// Desktop breakpoint (1024px+)
-@media (min-width: 1024px) {
-  #about {
-    main {
-      padding: 4rem 3rem;
+    @include desktop {
+      padding: $space-4xl $space-3xl;
 
       .intro {
-        margin-bottom: 5rem;
+        margin-bottom: $space-4xl;
 
         h2 {
           font-size: 2.5rem;
-          margin-bottom: 3rem;
+          margin-bottom: $space-3xl;
         }
 
         p {
@@ -198,17 +164,17 @@
 
         ul {
           grid-template-columns: repeat(2, 1fr);
-          gap: 1.5rem;
+          gap: $space-lg;
           max-width: 900px;
         }
       }
 
       #mindset {
-        padding-top: 4rem;
+        padding-top: $space-4xl;
 
         h2 {
           font-size: 2.5rem;
-          margin-bottom: 3rem;
+          margin-bottom: $space-3xl;
         }
 
         p {
@@ -217,12 +183,12 @@
           max-width: 900px;
           margin-left: auto;
           margin-right: auto;
-          margin-bottom: 3rem;
+          margin-bottom: $space-3xl;
         }
 
         ul {
           grid-template-columns: repeat(2, 1fr);
-          gap: 1.5rem;
+          gap: $space-lg;
           max-width: 900px;
         }
       }
