--- a/src/assets/styles/layout/_navbar.scss
+++ b/src/assets/styles/layout/_navbar.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
 
 #navbar {
   position: fixed;
@@ -29,7 +30,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 1.8rem;
+    margin: 0 $space-lg;
 
     ul {
       display: flex;
@@ -37,7 +38,7 @@
       gap: 0;
 
       li {
-        padding: 0.5rem 1rem;
+        padding: $space-xs $space-md;
 
         a {
           position: relative;
@@ -61,10 +62,10 @@
       }
     }
   }
-}
 
-@media (min-width: 768px) {
-  #navbar .content {
-    justify-content: space-between;
+  @include tablet {
+    .content {
+      justify-content: space-between;
+    }
   }
 }
