--- a/src/assets/styles/view/_about.scss
+++ b/src/assets/styles/view/_about.scss
@@ -45,13 +45,27 @@
           );
           animation: fadeInUp 0.8s ease-out;
 
-          &:nth-child(1) { animation-delay: 0.1s; }
-          &:nth-child(2) { animation-delay: 0.15s; }
-          &:nth-child(3) { animation-delay: 0.2s; }
-          &:nth-child(4) { animation-delay: 0.25s; }
-          &:nth-child(5) { animation-delay: 0.3s; }
-          &:nth-child(6) { animation-delay: 0.35s; }
-          &:nth-child(7) { animation-delay: 0.4s; }
+          &:nth-child(1) {
+            animation-delay: 0.1s;
+          }
+          &:nth-child(2) {
+            animation-delay: 0.15s;
+          }
+          &:nth-child(3) {
+            animation-delay: 0.2s;
+          }
+          &:nth-child(4) {
+            animation-delay: 0.25s;
+          }
+          &:nth-child(5) {
+            animation-delay: 0.3s;
+          }
+          &:nth-child(6) {
+            animation-delay: 0.35s;
+          }
+          &:nth-child(7) {
+            animation-delay: 0.4s;
+          }
         }
       }
     }
@@ -89,10 +103,18 @@
           );
           animation: fadeInUp 0.8s ease-out;
 
-          &:nth-child(1) { animation-delay: 0.5s; }
-          &:nth-child(2) { animation-delay: 0.55s; }
-          &:nth-child(3) { animation-delay: 0.6s; }
-          &:nth-child(4) { animation-delay: 0.65s; }
+          &:nth-child(1) {
+            animation-delay: 0.5s;
+          }
+          &:nth-child(2) {
+            animation-delay: 0.55s;
+          }
+          &:nth-child(3) {
+            animation-delay: 0.6s;
+          }
+          &:nth-child(4) {
+            animation-delay: 0.65s;
+          }
         }
       }
     }
