--- a/src/assets/styles/view/_contact.scss
+++ b/src/assets/styles/view/_contact.scss
@@ -37,9 +37,15 @@
           font-weight: 500;
           animation: fadeInUp 0.8s ease-out;
 
-          &:nth-child(1) { animation-delay: 0.1s; }
-          &:nth-child(2) { animation-delay: 0.2s; }
-          &:nth-child(3) { animation-delay: 0.3s; }
+          &:nth-child(1) {
+            animation-delay: 0.1s;
+          }
+          &:nth-child(2) {
+            animation-delay: 0.2s;
+          }
+          &:nth-child(3) {
+            animation-delay: 0.3s;
+          }
 
           &:active {
             transform: scale(0.98);
