--- a/src/assets/styles/view/_home.scss
+++ b/src/assets/styles/view/_home.scss
@@ -47,9 +47,15 @@
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
           animation: fadeInUp 0.8s ease-out;
 
-          &:nth-child(1) { animation-delay: 0.1s; }
-          &:nth-child(2) { animation-delay: 0.2s; }
-          &:nth-child(3) { animation-delay: 0.3s; }
+          &:nth-child(1) {
+            animation-delay: 0.1s;
+          }
+          &:nth-child(2) {
+            animation-delay: 0.2s;
+          }
+          &:nth-child(3) {
+            animation-delay: 0.3s;
+          }
 
           td {
             display: block;
@@ -134,9 +140,15 @@
             box-shadow: none;
             animation: none;
 
-            &:nth-child(1) { animation-delay: 0; }
-            &:nth-child(2) { animation-delay: 0; }
-            &:nth-child(3) { animation-delay: 0; }
+            &:nth-child(1) {
+              animation-delay: 0;
+            }
+            &:nth-child(2) {
+              animation-delay: 0;
+            }
+            &:nth-child(3) {
+              animation-delay: 0;
+            }
 
             &:last-child {
               border-bottom: none;
