add padding bottom for view and padding top for contact page

--- a/src/assets/styles/view/_contact.scss
+++ b/src/assets/styles/view/_contact.scss
@@ -3,6 +3,8 @@
 @use '../abstracts/animations' as *;
 
 #contact {
+  padding-top: 6rem;
+
   main {
     @include column;
     padding: $space-4xl $space-lg;
