--- a/src/assets/styles/base/_globals.scss
+++ b/src/assets/styles/base/_globals.scss
@@ -29,6 +29,7 @@ body {
 #view {
   margin-top: 68px;
   min-height: 95vh;
+  padding-bottom: 9rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -36,3 +37,4 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   color: $color-text-primary;
 }
+
