--- a/src/assets/styles/base/_globals.scss
+++ b/src/assets/styles/base/_globals.scss
@@ -29,7 +29,7 @@ body {
 #view {
   margin-top: 68px;
   min-height: 95vh;
-  padding-bottom: 9rem;
+  padding-bottom: $space-4xl;
 }
 
 h1, h2, h3, h4, h5, h6 {
